# sisense-sync

./: .gitignore  Dockerfile  config.yaml.example  pyproject.toml
sisense_sync/: actions.py  args.py  backup.py  client.py  download.py  remove.py  restore.py  upload.py
tests/: test_sisense_sync.py
