[tool.poetry]
name = "sisense-sync"
version = "0.1.0"
description = ""
authors = ["Chris Alexander <crainte@hybridoptix.net>"]

[tool.poetry.dependencies]
python = "^3.9"
PySenseSDK = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
