[tool.poetry]
name = "sisense-sync"
version = "0.1.0"
description = ""
authors = ["Chris Alexander <crainte@hybridoptix.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pysensesdk = {git = "https://github.com/crainte/PySense"}
GitPython = "^3.1.14"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
sisense-download = "sisense_sync.download:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
